[package]
name = "horizon"
version = "0.7.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "*"
sysinfo = "0.31.4"
blake3 = "1.5.1"
hex = "0.4.3"
argon2 = "*"

secrecy = { version = "0.8.0", features = ["alloc"] }
hashbrown = { version = "0.15.5", features = ["rayon"] }
rand = "*"
once_cell = "*"
hkdf = "0.13.0-rc.0"
hmac = "0.13.0-rc.0"
sha2 = "0.11.0-rc.0"
zeroize = "1.8.1"
dashmap = "7.0.0-rc2"

[profile.release]
lto = "fat"              # Link Time Optimization
codegen-units = 1        # Meilleure optimisation
panic = "abort"          # Binaire plus petit
opt-level = 3            # Optimisation maximale


[profile.bench]
inherits = "release"
debug = true